--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"laravel/framework": "4.2.*",
 		"zizaco/confide": "~4.3@dev",
 		"efficiently/authority-controller": "1.2.*",
-		"aws/aws-sdk-php-laravel": "1.*"
+		"aws/aws-sdk-php-laravel": "1.*",
+		"php": "^5.5.9"
 	},
 	"autoload": {
 		"classmap": [
